welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:15: error: ';' expected but 'else' found.
      }else {
       ^